# AIC22

./: .gitignore  README.md  script.sh  todo.md
.github/workflows/: telegram.yml
client/: CMakeLists.txt  README.md  application.yml  build.sh  main.cpp
client/ai/: CMakeLists.txt  ai.cpp  ai.h  graph.cpp  graph.h  shortestpath.cpp  shortestpath.h  types.h  world.h
client/client/: CMakeLists.txt  client.cpp  client.h  exceptions.h
client/proto/: CMakeLists.txt
client/proto/v1/: hide_and_seek.proto
map/map1/: map.yml
map/map2/: map.yml
map/map3/: map.yml
release/: alphabeta-v1  base-v0  base-v1  base-v2  cpp-default  danger-v2  danger-v3  eval-v1.4  final-v1  final-v2  gasht-v1  gasht-v2  gasht-v3  minimax-v0  preprocess-v1  shortestpath-v0  timeout-v1  world-v1
